--- a/Day-3/cost_function.ipynb
+++ b/Day-3/cost_function.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -112,13 +112,28 @@
    "source": [
     "w_guess = 0.6\n",
     "b_guess = 0.5\n",
-    "y_pred = np.dot(w_guess,x_train) + b_guess\n",
-    "diff = y_pred - y_train\n",
-    "cost = diff ** 2\n",
-    "total_cost = np.sum(cost)\n",
+    "#y_pred = np.dot(w_guess,x_train) + b_guess\n",
+    "y_pred = []\n",
+    "total_cost = 0\n",
+    "cost = np.zeros(len(x_train))\n",
+    "diff = np.zeros(len(x_train))\n",
+    "\n",
+    "for i in range(len(x_train)):\n",
+    "    y_pred.append(x_train[i] * w_guess + b_guess)\n",
+    "    diff[i] = y_pred[i] - y_train[i]\n",
+    "    cost[i] = diff[i]**2\n",
+    "    total_cost += cost[i]\n",
+    "\n",
     "print(f\"Cost of each data point is : {cost}\")\n",
     "print(f\"Total  cost is : {total_cost}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -148,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
